[package]
name = "raw-parts"
version = "1.0.1"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2021"
description = """
Ergonomic wrapper around `Vec::from_raw_parts` and `Vec::into_raw_parts`.
"""
repository = "https://github.com/artichoke/raw-parts"
readme = "README.md"
license = "MIT"
keywords = ["ffi", "no_std", "unsafe", "vec", "vector"]
categories = ["no-std", "rust-patterns"]
include = ["src/**/*", "tests/**/*", "LICENSE", "README.md"]

[dependencies]

[dev-dependencies]
# Check that crate versions are properly updated in documentation and code when
# bumping the version.
version-sync = "0.9, >= 0.9.2"
