[package]
name = "raw-parts"
version = "1.0.1"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2021"
rust-version = "1.56.0"
description = """
Ergonomic wrapper around `Vec::from_raw_parts` and `Vec::into_raw_parts`.
"""
repository = "https://github.com/artichoke/raw-parts"
readme = "README.md"
license = "MIT"
keywords = ["ffi", "no_std", "unsafe", "vec", "vector"]
categories = ["no-std", "rust-patterns"]
include = ["src/**/*", "tests/**/*", "LICENSE", "README.md"]

[dependencies]

[dev-dependencies]

# Check that crate versions are properly updated in documentation and code when
# bumping the version.
[dev-dependencies.version-sync]
version = "0.9.3"
default-features = false
features = ["markdown_deps_updated", "html_root_url_updated"]
