[package]
name = "raw-parts"
version = "1.1.2"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
license = "MIT"
edition = "2021"
rust-version = "1.56.0"
readme = "README.md"
repository = "https://github.com/artichoke/raw-parts"
documentation = "https://docs.rs/raw-parts"
homepage = "https://github.com/artichoke/raw-parts"
description = """
Ergonomic wrapper around `Vec::from_raw_parts` and `Vec::into_raw_parts`.
"""
keywords = ["ffi", "no_std", "unsafe", "vec", "vector"]
categories = ["no-std", "rust-patterns"]
include = ["src/**/*", "tests/**/*", "LICENSE", "README.md"]

[dependencies]

[dev-dependencies]

# Check that crate versions are properly updated in documentation and code when
# bumping the version.
[dev-dependencies.version-sync]
version = "0.9.3"
default-features = false
features = ["markdown_deps_updated", "html_root_url_updated"]

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu` and only builds
# that target. `raw-parts` has the same API and code on all targets.
default-target = "x86_64-unknown-linux-gnu"
targets = []
rustdoc-args = ["--cfg", "docsrs"]
